[package]
name = "boa-common"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
boa_engine.workspace = true
boa_gc.workspace = true
boa_runtime.workspace = true
hmac.workspace = true
sha2.workspace = true
futures-concurrency.workspace = true
futures-lite.workspace = true
http.workspace = true
wstd.workspace = true
