[package]
name = "obelisk-component-builder"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts.workspace = true
utils.workspace = true

cargo_metadata.workspace = true
indexmap.workspace = true
wasmtime.workspace = true

[lints]
workspace = true
