[package]
name = "obeli-sk-concepts"
description = "Internal package of obeli-sk"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
val-json.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
getrandom.workspace = true      # Only needed for the madsim patch
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true
wasmtime.workspace = true

[dev-dependencies]
madsim.workspace = true

[lints]
workspace = true
