[package]
name = "obeli-sk-concepts"
description = "Internal package of obeli-sk"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
val-json = { workspace = true, features = ["wasmtime"] }

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
chrono.workspace = true
const_format.workspace = true
derive-where.workspace = true
derive_more.workspace = true
fxhash.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
opentelemetry.workspace = true
rand.workspace = true
rusqlite = { optional = true, workspace = true }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-opentelemetry.workspace = true
tracing.workspace = true
ulid.workspace = true
wasmtime.workspace = true
wasmtime-environ.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true

[features]
test = []
rusqlite = ["dep:rusqlite"]

[lints]
workspace = true
