[package]
name = "db-mem"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
concepts.workspace = true
utils.workspace = true
val-json.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
derivative.workspace = true
derive_more.workspace = true
hashbrown.workspace = true
itertools.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
