[package]
name = "db-mem"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts.workspace = true
utils.workspace = true
val-json.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
derivative.workspace = true
derive_more.workspace = true
hashbrown.workspace = true
itertools.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
test = []

[lints]
workspace = true
