[package]
name = "db-mem"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts.workspace = true
utils.workspace = true
val-json.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
hashbrown.workspace = true
itertools.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true

[features]
test = ["concepts/test"]

[lints]
workspace = true
