[package]
name = "obeli-sk-db-postgres"
description = "Internal package of obeli-sk"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts = { workspace = true, features = ["postgres"] }
db-common.workspace = true
val-json.workspace = true

anyhow.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
const_format.workspace = true
deadpool-postgres.workspace = true
derive_more.workspace = true
hashbrown.workspace = true
strum.workspace = true
tokio-postgres.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true

[features]
test = ["concepts/test"]

[lints]
workspace = true
