[package]
name = "db-sqlite"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
concepts.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-sqlite.workspace = true
async-trait.workspace = true
chrono.workspace = true
derivative.workspace = true
derive_more.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
tempfile = ["dep:tempfile"]

[lints]
workspace = true
