[package]
name = "obeli-sk-db-sqlite"
description = "Internal package of obeli-sk"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts = { workspace = true, features = ["rusqlite"] }
db-common.workspace = true
val-json.workspace = true

assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
const_format.workspace = true
derive_more.workspace = true
hashbrown.workspace = true
hdrhistogram.workspace = true
itertools.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_matches.workspace = true

[features]
tempfile = ["dep:tempfile"]
test = ["concepts/test"]

[lints]
workspace = true
