[package]
name = "db"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
concepts.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
derivative.workspace = true
derive_more.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
tracing.workspace = true

[dev-dependencies]
madsim.workspace = true
test-utils.workspace = true
utils.workspace = true


[features]
test = []

[lints]
workspace = true
