[package]
name = "obeli-sk-executor"
description = "Internal package of obeli-sk"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts.workspace = true
utils.workspace = true
val-json.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-channel.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
chrono.workspace = true
derivative.workspace = true
derive_more.workspace = true
indexmap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
db-mem.workspace = true
db-sqlite = { workspace = true, features = ["tempfile"] }
test-utils.workspace = true
db-tests.workspace = true

anyhow.workspace = true
madsim.workspace = true
rstest.workspace = true

[features]
test = []

[lints]
workspace = true
