[package]
name = "obeli-sk-executor"
description = "Internal package of obelisk"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts.workspace = true
utils.workspace = true
val-json.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
hashbrown.workspace = true
indexmap.workspace = true
opentelemetry.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-opentelemetry.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
db-mem.workspace = true
db-sqlite = { workspace = true, features = ["tempfile"] }
db-tests.workspace = true
test-db-macro.workspace = true
test-utils.workspace = true

anyhow.workspace = true
rstest.workspace = true

[features]
test = []

[lints]
workspace = true
