[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = "0.1"
lazy_static = "1.4.0"
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wit-component = "0.18.2"
wit-parser = "0.13.0"
