[package]
name = "runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
wit-component.workspace = true
wit-parser.workspace = true
