[package]
name = "scheduler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
concepts.workspace = true
val-json.workspace = true

async-channel.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
indexmap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
tracing-unwrap.workspace = true
tracing.workspace = true
ulid.workspace = true
wasmtime.workspace = true

[dev-dependencies]
assert_matches.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
