[package]
name = "obeli-sk-utils"
description = "Internal package of obeli-sk"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts.workspace = true
val-json.workspace = true

anyhow.workspace = true
cfg-if.workspace = true
chrono.workspace = true
derivative.workspace = true
hashbrown.workspace = true
hyper.workspace = true
indexmap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime-wasi-http.workspace = true
wasmtime-wasi.workspace = true
wasmtime.workspace = true
wit-parser.workspace = true

[dev-dependencies]
insta.workspace = true
madsim.workspace = true
rstest.workspace = true
serde.workspace = true
test-programs-fibo-workflow-builder.workspace = true
test-programs-http-get-workflow-builder.workspace = true
test-utils.workspace = true
tokio.workspace = true

[lints]
workspace = true
