[package]
name = "obeli-sk-utils"
description = "Internal package of obeli-sk"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts.workspace = true
val-json.workspace = true

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
const_format.workspace = true
derive_more.workspace = true
hashbrown.workspace = true
hyper.workspace = true
id-arena.workspace = true
indexmap.workspace = true
semver.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmparser.workspace = true
wasmtime-wasi-http.workspace = true
wasmtime-wasi.workspace = true
wasmtime.workspace = true
wit-component.workspace = true
wit-parser.workspace = true

[dev-dependencies]
insta.workspace = true
madsim.workspace = true
rstest.workspace = true
serde.workspace = true
test-programs-fibo-workflow-builder.workspace = true
test-programs-fibo-activity-builder.workspace = true
test-programs-fibo-webhook-builder.workspace = true
test-programs-http-get-activity-builder.workspace = true
test-programs-http-get-workflow-builder.workspace = true
test-utils.workspace = true
tokio.workspace = true

[features]
test = []

[lints]
workspace = true
