[package]
name = "val-json"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
indexmap = { workspace = true, features = ["serde"]}
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
wast.workspace = true
wit-parser.workspace = true

[lints]
workspace = true
