[package]
name = "obeli-sk-val-json"
description = "Internal package of obeli-sk"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
itertools.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
wasmtime = { workspace = true, optional = true }
wast.workspace = true

[dev-dependencies]
assert_matches.workspace = true

[features]
wasmtime = ["dep:wasmtime"]

[lints]
workspace = true
