[package]
name = "wasm-workers"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
concepts.workspace = true
executor.workspace = true
utils.workspace = true
val-json.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-channel.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
chrono.workspace = true
derivative.workspace = true
derive_more.workspace = true
indexmap.workspace = true
itertools.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true
valuable.workspace = true
wasmtime-wasi-http.workspace = true
wasmtime-wasi.workspace = true
wasmtime.workspace = true
wit-parser.workspace = true

[dev-dependencies]
db-mem.workspace = true
db-sqlite.workspace = true
db-tests.workspace = true
test-programs-fibo-activity-builder.workspace = true
test-programs-fibo-workflow-builder.workspace = true
test-programs-sleep-activity-builder.workspace = true
test-programs-sleep-workflow-builder.workspace = true
test-programs-http-get-activity-builder.workspace = true
test-programs-http-get-workflow-builder.workspace = true
test-utils.workspace = true
executor = { workspace = true, features = ["test"] }

async-trait.workspace = true
futures-util.workspace = true
madsim.workspace = true
rstest.workspace = true
wiremock.workspace = true

[lints]
workspace = true
