[package]
name = "obeli-sk-wasm-workers"
description = "Internal package of obelisk"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts.workspace = true
db-mem.workspace = true
executor.workspace = true
utils.workspace = true
val-json.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
const_format.workspace = true
derive_more.workspace = true
hashbrown.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
indexmap.workspace = true
itertools.workspace = true
libc.workspace = true
rand.workspace = true
route-recognizer.workspace = true
secrecy.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true
ulid.workspace = true
wasmtime-wasi-http.workspace = true
wasmtime-wasi-io.workspace = true
wasmtime-wasi.workspace = true
wasmtime.workspace = true

[features]
test = []
boa-unstable = []
boa-unstable-workflow = []

[dev-dependencies]
concepts = { workspace = true, features = ["test"] }
db-sqlite = { workspace = true, features = ["tempfile"] }
db-tests.workspace = true
executor = { workspace = true, features = ["test"] }
insta.workspace = true
serde_json.workspace = true
test-db-macro.workspace = true
test-programs-dir-activity-builder.workspace = true
test-programs-fibo-activity-builder.workspace = true
test-programs-fibo-webhook-builder.workspace = true
test-programs-fibo-workflow-builder.workspace = true
test-programs-adhoc-js-workflow-builder.workspace = true
js-activity-runtime-builder.workspace = true
test-programs-http-get-activity-builder.workspace = true
test-programs-http-get-webhook-builder.workspace = true
test-programs-http-get-workflow-builder.workspace = true
test-programs-process-activity-builder.workspace = true
test-programs-serde-activity-builder.workspace = true
test-programs-serde-workflow-builder.workspace = true
test-programs-sleep-activity-builder.workspace = true
test-programs-sleep-workflow-builder.workspace = true
test-programs-stub-activity-builder.workspace = true
test-programs-stub-workflow-builder.workspace = true
test-utils.workspace = true
utils.workspace = true

async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rstest.workspace = true
tempfile.workspace = true
wiremock.workspace = true

[lints]
workspace = true
