[package]
name = "webui-proxy"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[build-dependencies]
webui-builder.workspace = true

[dependencies]
anyhow.workspace = true
wit-bindgen.workspace = true
url.workspace = true
futures = { workspace = true, default-features = false, features = ['alloc'] }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
