[package]
name = "webui-proxy"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[build-dependencies]
webui-builder.workspace = true

[dependencies]
futures-concurrency.workspace = true
wstd.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
