[package]
name = "webui"
description = "Web UI for obelisk"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hashbrown.workspace = true
implicit-clone.workspace = true
indexmap.workspace = true
log.workspace = true
prost-wkt-types.workspace = true
prost.workspace = true
serde_json.workspace = true
tonic = { workspace = true, default-features = false, features = [
    "codegen",
    "prost",
] }
tonic-web-wasm-client.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
wasm-logger.workspace = true
yew-router.workspace = true
yew.workspace = true
yewprint.workspace = true
yew_icons = { version = "0.8.0", features = ["LucideBox", "LucideFileDiff"] }
web-sys.workspace = true

[build-dependencies]
tonic-build = { workspace = true, default-features = false, features = [
    "prost",
] }
yewprint-css.workspace = true

# TODO: Configure in Trunk.toml in trunk 21.0+ : cargo_profile = "trunk-release"
# [profile.release]
# strip = "symbols"
