[package]
name = "webui"
description = "Web UI for obelisk"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
val-json = { workspace = true }

anyhow.workspace = true
assert_matches.workspace = true
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
hashbrown.workspace = true
implicit-clone.workspace = true
indexmap.workspace = true
log.workspace = true
prost-wkt-types.workspace = true
prost.workspace = true
rand = { workspace = true, features = ["small_rng", "std"] }
serde_json.workspace = true
tonic = { workspace = true, default-features = false, features = [
    "codegen",
    "prost",
] }
tonic-web-wasm-client.workspace = true
ulid.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
wasm-logger.workspace = true
web-sys.workspace = true
wit-component.workspace = true
wit-parser.workspace = true
yew-router.workspace = true
yew.workspace = true
yew_icons.workspace = true
yewprint.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
tonic-build = { workspace = true, default-features = false, features = [
    "prost",
] }
yewprint-css.workspace = true
