[package]
name = "wasm-email-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cargo-component-bindings = "0.4"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasm-email-provider"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"component:wasm-email-provider" = { path = "wit/deps/email-provider" }
