[package]
name = "wasm-email-provider"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cargo-component-bindings.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasm-email-provider"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"component:wasm-email-provider" = { path = "wit/deps/email-provider" }
