[package]
name = "activity-js-runtime-builder"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
activity-js = []

[build-dependencies]
obelisk-component-builder.workspace = true
