[package]
name = "benches"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
runtime.workspace = true
test_programs_fibo_activity_builder.workspace = true
test_programs_fibo_workflow_builder.workspace = true
test_programs_types_activity_builder.workspace = true
test_programs_types_workflow_builder.workspace = true

criterion = { workspace = true, features = ["async_tokio"] }
lazy_static.workspace = true
tokio.workspace = true
wasmtime.workspace = true

[[bench]]
name = "fibo"
harness = false
