[package]
name = "benches"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dev-dependencies]
runtime.workspace = true
test-programs-fibo-activity-builder.workspace = true
test-programs-fibo-workflow-builder.workspace = true
test-programs-http-get-activity-builder.workspace = true
test-programs-http-get-workflow-builder.workspace = true
test-programs-types-activity-builder.workspace = true
test-programs-types-workflow-builder.workspace = true

criterion = { workspace = true, features = ["async_tokio"] }
futures-util.workspace = true
lazy_static.workspace = true
tokio.workspace = true
wasmtime.workspace = true
wiremock.workspace = true

[[bench]]
name = "fibo"
harness = false

[[bench]]
name = "http"
harness = false
