[package]
name = "cargo-component-builder"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts.workspace = true
utils.workspace = true

cargo_metadata.workspace = true
indexmap.workspace = true
wasmtime.workspace = true

[lints]
workspace = true
