[package]
name = "db-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
concepts.workspace = true
db-mem.workspace = true
db-sqlite = { workspace = true, features = ["tempfile"] }
test-utils.workspace = true
utils.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
madsim.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
