[package]
name = "db-tests"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
concepts = { workspace = true, features = ["test"] }
db-mem = { workspace = true, features = ["test"] }
db-sqlite = { workspace = true, features = ["tempfile", "test"] }
test-utils.workspace = true
utils.workspace = true
val-json.workspace = true

arbitrary.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
chrono.workspace = true
rand.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
test-db-macro.workspace = true

[lints]
workspace = true
